2025-11-19T12:32:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19501418678 # 1315
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-19
* notice: last 14d: unq all: 63 105
* notice: prev accum: outdated-unq outdated-all / unq all: 4993 9955 / 5074 10065
* notice: next accum: outdated-unq outdated-all / unq all: 4993 9955 / 5075 10066
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-05 2025-11-19]

2025-11-19T01:11:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19486160969 # 1314
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-19
* notice: last 14d: unq all: 63 106
* notice: prev accum: outdated-unq outdated-all / unq all: 4989 9944 / 5074 10065
* notice: next accum: outdated-unq outdated-all / unq all: 4993 9955 / 5074 10065
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -2 -4 / +13 +21 -2 -4 / 11 17
* notice: removed / changed dates: [2025-11-04] / [2025-11-05]

2025-11-17T12:32:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19429720072 # 1311
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-17
* notice: last 14d: unq all: 68 121
* notice: prev accum: outdated-unq outdated-all / unq all: 4988 9942 / 5066 10056
* notice: next accum: outdated-unq outdated-all / unq all: 4989 9944 / 5074 10065
* notice: prev exec diff / last date diff / accum: unq all: +8 +9 -0 -0 / +8 +9 -0 -0 / 8 9
* notice: removed / changed dates: [2025-11-03] / [2025-11-17]

2025-11-17T01:12:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19415282051 # 1310