@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-07T01:11:04Z",
-  "count" : 8,
-  "count_minmax" : [ 7, 8 ],
-  "count_decinc" : [ -0, +8 ],
-  "uniques" : 5,
-  "uniques_minmax" : [ 4, 5 ],
-  "uniques_decinc" : [ -0, +5 ]
+  "timestamp" : "2025-11-20T01:10:31Z",
+  "count" : 6,
+  "count_minmax" : [ 6, 8 ],
+  "count_decinc" : [ -2, +8 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 3, 5 ],
+  "uniques_decinc" : [ -2, +5 ]
 }
