@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-11-19T12:32:29Z",
-  "count_outdated" : 9955,
-  "uniques_outdated" : 4993,
-  "count" : 10066,
-  "uniques" : 5075,
+  "timestamp" : "2025-11-20T01:10:31Z",
+  "count_outdated" : 9976,
+  "uniques_outdated" : 5006,
+  "count" : 10069,
+  "uniques" : 5077,
   "clones" : [
     {
-      "timestamp": "2025-11-05T00:00:00Z",
-      "count": 15,
-      "count_minmax": [ 4, 21 ],
-      "count_decinc": [ 6, 21 ],
-      "uniques": 10,
-      "uniques_minmax": [ 2, 13 ],
-      "uniques_decinc": [ 3, 13 ]
-    },
-    {
       "timestamp": "2025-11-06T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 7, 8 ],
-      "count_decinc": [ 0, 8 ],
-      "uniques": 5,
-      "uniques_minmax": [ 4, 5 ],
-      "uniques_decinc": [ 0, 5 ]
+      "count": 6,
+      "count_minmax": [ 6, 8 ],
+      "count_decinc": [ 2, 8 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 5 ],
+      "uniques_decinc": [ 2, 5 ]
     },
     {
       "timestamp": "2025-11-07T00:00:00Z",
@@ -115,12 +106,12 @@
     },
     {
       "timestamp": "2025-11-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
