@@ -1,16 +1,11 @@
 {
-  "count": 105,
-  "uniques": 63,
+  "count": 91,
+  "uniques": 58,
   "clones": [
     {
-      "timestamp": "2025-11-05T00:00:00Z",
-      "count": 15,
-      "uniques": 10
-    },
-    {
       "timestamp": "2025-11-06T00:00:00Z",
-      "count": 8,
-      "uniques": 5
+      "count": 6,
+      "uniques": 3
     },
     {
       "timestamp": "2025-11-07T00:00:00Z",
@@ -64,8 +59,8 @@
     },
     {
       "timestamp": "2025-11-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
