@@ -1,3 +1,12 @@
+2025-11-20T01:10:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19521828457 # 1316
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-20
+* notice: last 14d: unq all: 58 91
+* notice: prev accum: outdated-unq outdated-all / unq all: 4993 9955 / 5075 10066
+* notice: next accum: outdated-unq outdated-all / unq all: 5006 9976 / 5077 10069
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -2 -2 / +3 +4 -0 -0 / 3 4
+* notice: removed / changed dates: [2025-11-05] / [2025-11-06 2025-11-19]
+
 2025-11-19T12:32:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19501418678 # 1315
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-19
